delete deprecated code and clean up code